# message-log-app

./: .gitignore  Cargo.toml  README.md  metadata.json
api/: app.wit  message-log-app-dot-os-v0.wit  types-message-log-app-dot-os-v0.wit
caller-utils/src/: lib.rs
message-log-app/: Cargo.toml
message-log-app/src/: lib.rs  types.rs
pkg/: manifest.json
test/: tests.toml
test/message-log-app-test/: Cargo.toml  metadata.json
test/message-log-app-test/api/: test-message-log-app-dot-os-v0.wit  types-test-message-log-app-dot-os-v0.wit
test/message-log-app-test/message-log-app-test/: Cargo.toml
test/message-log-app-test/message-log-app-test/src/: client_ops.rs  lib.rs  utils.rs
test/message-log-app-test/pkg/: manifest.json
ui/: index.html
ui/src/: App.css
