[dependencies]
anyhow = "1.0"
futures = "0.3"
futures-util = "0.3"
once_cell = "1.20.2"
process_macros = "0.1.0"
wit-bindgen = "0.36.0"

[dependencies.caller-utils]
path = "../caller-utils"

[dependencies.hyperprocess_macro]
branch = "main"
git = "https://github.com/hyperware-ai/hyperprocess-macro"

[dependencies.hyperware_app_common]
branch = "main"
git = "https://github.com/hyperware-ai/hyperprocess-macro"

[dependencies.hyperware_process_lib]
features = ["logging"]
version = "1.0.4"

[dependencies.serde]
features = ["derive"]
version = "1.0"

[dependencies.uuid]
version = "1.0"

[lib]
crate-type = ["cdylib"]

[package]
edition = "2021"
name = "message-log-app"
version = "0.1.0"

[package.metadata.component]
package = "hyperware:process"
